# kevin

./: .cursorrules  .gitignore  Dockerfile.sandbox  README.md  pyproject.toml
src/kevin/: cli.py  config.py  loop_executor.py  repo.py
src/kevin/models/: __init__.py  claude.py  example_usage.py  expansion.py  loop_state.py  prompts.py  types.py  validation.py
src/kevin/sandbox/: __init__.py  local.py
tests/: test_cli.py  test_enhanced_features.py  test_integration.py  test_models.py
