[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kevin"
version = "0.1.0"
description = "kevin-like minimal AI engineer CLI (scaffold)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{ name = "Candidate" }]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "pydantic>=2.9",
    "pydantic-settings>=2.4",
    "anthropic>=0.40",
    "tiktoken>=0.5.0",
]

[project.scripts]
kevin = "kevin.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
